--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^1.6.6",
     "primeng": "^4.0.1",
+    "quill": "^1.2.4",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
